fixed author; added spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,6 +36,6 @@ hr {
 }
 
 .author-text {
-  font-size: 0.5em;
+  font-size: 0.75em;
   font-weight: bold;
 }
